@@ -462,9 +462,13 @@ nco_cnv_cf_cll_mth_add               /* [fnc] Add cell_methods attributes */
   dmn_mch=(int *)nco_calloc(dmn_nbr_rdc,sizeof(int));
 
   if(cb){
-    if(cb->bnd2clm || cb->clm2clm) cll_mth_clm=strdup("time: mean within years time: mean over years");
-    if(cb->clm2bnd) cll_mth_clm=strdup("time: mean");
-    if(cb->bnd2tpdclm) cll_mth_clm=strdup("time: mean within days time: mean within years time: mean over years");
+    if(cb->tpd > 1) cll_mth_clm=strdup("time: mean within days time: mean within years time: mean over years");
+    else if(cb->bnd2clm || cb->clm2clm) cll_mth_clm=strdup("time: mean within years time: mean over years");
+    else if(cb->clm2bnd) cll_mth_clm=strdup("time: mean");
+    else{
+      (void)fprintf(stdout,"%s: ERROR %s reports climatology bounds error with variable %s\n",nco_prg_nm_get(),fnc_nm,var_trv->nm);
+      nco_exit(EXIT_FAILURE);
+    } /* !cb->tpd */
   } /* !cb */
 
   /* Process all variables */
